--- a/index.html
+++ b/index.html
@@ -1,1 +1,80 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
+  <link rel="stylesheet" href="style.css">
+  
+  <title>Professional Portfolio</title>
+</head>
+
+
+<body>
+  <div class="container">
+    <header class="header">
+      <h1 id="heade__logo">Amaya Breakfield</h1>
+      <nav class="header__nav">
+        <ul class="header__nav_list">
+          <li class="header__nav_listItem"><a href="#">About</a></li>
+          <li class="header__nav_listItem"><a href="#">Contact</a></li>
+        </ul>
+      </nav>
+    </header>
+    <section class="profile">
+      <figure>
+        <img src="assets\amayasgraduation.jpg" alt="graduation profile" class="profile__image"
+      </figure>
+      <article class="profile__heading">
+        <h2>Hello there</h2>
+        <p>​I'm an entry level software developer, I'm currently attending a coding bootcamp and will complete the program at the end of August. I have the ability to pick up information quickly. I'm an individual contributor but also work well with others. I have great attention to detail. I'm looking for a role where I can apply what I've learned but  also continue to develop my skillset.</p>
+      </article>
+    </section>
+    <h2 class="projects__title">Current Projects</h2>
+    <section class="projects">
+      <article class="projects__column">
+        <h3 class="projects__column_title">Project 1</h3>
+        <figure class="projects__column_figure"
+        <p><a href="https://github.com/2021-October-Java-PT/virtual-pet-amayabreakfield1/tree/master/src">
+          <img src="assets\bunny.jpg" alt="" class="projects_column_image">
+          </a></p>
+         
+        </figure>
+        <p>Virtual Pet was the first project I did. We built out unit tests in the virtual pet tetst class to test the behaviors placed in virtual pet.</p>
+      </article>
+      <article class="projects__column">
+        <h3 class="projects__column_title">Project 2</h3>
+        <figure class="projects__column_figure">
+          <p><a href="https://github.com/2022-April-Java-PT-Classroom/virtual-pet-shelter-amayabreakfield1/tree/master/src">
+          <img src="assets\bunny.jpg" alt="" class="projects_column_image">
+          </a></p>
+          
+        </figure>
+        <p>​We used TDD to drive the creation of an application that simulates you taking care of the pets in a shelter.</p>
+      </article>
+      <article class="projects__column">
+        <h3 class="projects__column_title">Project 3</h3>
+        <figure class="projects__column_figure">
+          <p><a href="https://github.com/2022-April-Java-PT-Classroom/virtual-pet-amok-amayabreakfield1">
+          <img src="assets\bunny.jpg" alt="" class="projects_column_image">
+          </a></p>
+        </figure>
+        <p>This project includes a model that allows for dogs and cats, either of which may be robotic. An attribute (instance variable) representing overall health that is updated as a result of other attributes moving in a negative or positive direction, influencing happiness. And methods that allow for oiling robotic pets, walking dogs, decreasing the likelihood that organic dogs will soil their cages, while increasing happiness in all dogs.</p>
+      </article>
+    </section>
+    <footer class="footer">
+      <small class="footer__copyright">&copy wcci 2022</small>
+      <section class="footer__social">
+        <a href="#" class="fa fa-linkedin"></a>
+        <a href="#" class="fa fa-github"></a>
+
+        <h2>Contact Info</h2>
+        <p>Email:ambreakfield83@gmail.com</p>
+      </section>
+    </footer>
+  </div>
+</body>
+
+
+</html>
